Ex-3/frontend-service.yaml
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: davids-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: ClusterIP
